--- a/style.css
+++ b/style.css
@@ -1,89 +1,71 @@
-byt{
-    font-size: 20px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 8px;
-    /* display: flex; */
-    
+byt {
+  font-size: 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 8px;
+  /* display: flex; */
 }
-#b1{
-    position: absolute;
-    /* rotate: 20deg; */
- 
-    
+#b1 {
+  position: absolute;
+  /* rotate: 20deg; */
 }
-#b2{
-    position: absolute;
-    /* rotate: 20deg; */
- 
-    
+#b2 {
+  position: absolute;
+  /* rotate: 20deg; */
 }
-#b3{
-    position: absolute;
-    /* rotate: 20deg; */
-    
+#b3 {
+  position: absolute;
+  /* rotate: 20deg; */
 }
-#b4{
-    position: absolute;
-    /* rotate: 20deg; */
-    
+#b4 {
+  position: absolute;
+  /* rotate: 20deg; */
 }
-#b5{
-    position: absolute;
-    /* rotate: 20deg; */
-    
+#b5 {
+  position: absolute;
+  /* rotate: 20deg; */
 }
-#b6{
-    position: absolute;
-    /* rotate: 20deg; */
-    
+#b6 {
+  position: absolute;
+  /* rotate: 20deg; */
 }
-#b7{
-    position: absolute;
-    /* rotate: 20deg; */
-    
+#b7 {
+  position: absolute;
+  /* rotate: 20deg; */
 }
-#b8{
-    position: absolute;
-    /* rotate: 20deg; */
-    
-    
+#b8 {
+  position: absolute;
+  /* rotate: 20deg; */
 }
-#b9{
-    position: absolute;
-    /* rotate: 20deg; */
- 
-    
+#b9 {
+  position: absolute;
+  /* rotate: 20deg; */
 }
-#b10{
-    position: absolute;
-    /* rotate: 20deg; */
-    
+#b10 {
+  position: absolute;
+  /* rotate: 20deg; */
 }
-#b11{
-    position: absolute;
-    /* rotate: 20deg; */
-    
+#b11 {
+  position: absolute;
+  /* rotate: 20deg; */
 }
-#b12{
-    position: absolute;
-    /* rotate: 20deg; */
-    
+#b12 {
+  position: absolute;
+  /* rotate: 20deg; */
 }
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid red;
-    height: 80vh;
-    flex-direction: column;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid red;
+  height: 80vh;
+  flex-direction: column;
 }
-.container1{
-    
-    border: 4px solid red;   
+.container1 {
+  border: 4px solid red;
   padding: 200px;
   border-radius: 200px;
- 
 }
-.mynum{
-    display: flex;
+.mynum {
+  display: flex;
 }
